--- a/font.css
+++ b/font.css
@@ -1,12 +1,41 @@
 /*
-Font Name: CS Chatthai UI
-Weights: 400
+ Font Name: Boon
+ Weights: 300, 400, 500, 600, 700
 */
-@font-face {
-    font-family: 'cs-chatthai-ui';
-    src: url('cschatthaiui-webfont.woff2') format('woff2'),
-         url('cschatthaiui-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
 
+@font-face {
+    font-family: 'boon';
+    src: url('boon-300.woff2') format('woff2'),
+         url('boon-300.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'boon';
+    src: url('boon-400.woff2') format('woff2'),
+         url('boon-400.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'boon';
+    src: url('boon-500.woff2') format('woff2'),
+         url('boon-500.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'boon';
+    src: url('boon-600.woff2') format('woff2'),
+         url('boon-600.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'boon';
+    src: url('boon-700.woff2') format('woff2'),
+         url('boon-700.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
 }
