--- a/font.css
+++ b/font.css
@@ -1,41 +1,26 @@
 /*
- Font Name: Boon
- Weights: 300, 400, 500, 600, 700
+ Font Name: Cloud
+ Weights: 300, 700
 */
 
 @font-face {
-    font-family: 'boon';
-    src: url('boon-300.woff2') format('woff2'),
-         url('boon-300.woff') format('woff');
-    font-weight: 300;
+    font-family: 'cloud';
+    src: url('cloud-bold-webfont.eot');
+    src: url('cloud-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cloud-bold-webfont.woff2') format('woff2'),
+         url('cloud-bold-webfont.woff') format('woff'),
+         url('cloud-bold-webfont.ttf') format('truetype');
+    font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'boon';
-    src: url('boon-400.woff2') format('woff2'),
-         url('boon-400.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'boon';
-    src: url('boon-500.woff2') format('woff2'),
-         url('boon-500.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'boon';
-    src: url('boon-600.woff2') format('woff2'),
-         url('boon-600.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'boon';
-    src: url('boon-700.woff2') format('woff2'),
-         url('boon-700.woff') format('woff');
-    font-weight: 700;
+    font-family: 'cloud';
+    src: url('cloud-light-webfont.eot');
+    src: url('cloud-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cloud-light-webfont.woff2') format('woff2'),
+         url('cloud-light-webfont.woff') format('woff'),
+         url('cloud-light-webfont.ttf') format('truetype');
+    font-weight: 300;
     font-style: normal;
 }
