--- a/font.css
+++ b/font.css
@@ -1,26 +1,60 @@
 /*
- Font Name: Cloud
- Weights: 300, 700
+Font Name: Sarabun
+Weights: 100, 200, 300, 400, 500, 600, 700, 800
 */
-
 @font-face {
-    font-family: 'cloud';
-    src: url('cloud-bold-webfont.eot');
-    src: url('cloud-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('cloud-bold-webfont.woff2') format('woff2'),
-         url('cloud-bold-webfont.woff') format('woff'),
-         url('cloud-bold-webfont.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
+	font-family: 'sarabun';
+	src: url('Sarabun-Thin.woff2') format('woff2'),
+		  url('Sarabun-Thin.woff') format('woff');
+	font-weight: 100;
+	font-style: normal;
 }
-
 @font-face {
-    font-family: 'cloud';
-    src: url('cloud-light-webfont.eot');
-    src: url('cloud-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('cloud-light-webfont.woff2') format('woff2'),
-         url('cloud-light-webfont.woff') format('woff'),
-         url('cloud-light-webfont.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
+	font-family: 'sarabun';
+	src: url('Sarabun-ExtraLight.woff2') format('woff2'),
+		  url('Sarabun-ExtraLight.woff') format('woff');
+	font-weight: 200;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-Light.woff2') format('woff2'),
+		  url('Sarabun-Light.woff') format('woff');
+	font-weight: 300;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-Regular.woff2') format('woff2'),
+		  url('Sarabun-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-Medium.woff2') format('woff2'),
+		  url('Sarabun-Medium.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-SemiBold.woff2') format('woff2'),
+		  url('Sarabun-SemiBold.woff') format('woff');
+	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-Bold.woff2') format('woff2'),
+		  url('Sarabun-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'sarabun';
+	src: url('Sarabun-ExtraBold.woff2') format('woff2'),
+		  url('Sarabun-ExtraBold.woff') format('woff');
+	font-weight: 800;
+	font-style: normal;
 }
